--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
 <p id="youSaid">you said:</p>
 <p id="result">result</p>
+<p id="score">Your score is: </p>
+
+<p id="fails">fails: </p>
+<p id="round">round: </p>
+<p id="level">level: </p>
 
 <div class="container">
     <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In Google Chrome.</h3>
-
-
-    <button id="start-record-btn" title="Smaller -10px">Smaller -10px</button>
-    <button id="pause-record-btn" title="Pause Recording">Pause Recognition</button>
-    <button id="new-char-btn" title="New Char">New Char</button>
 </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
