fixing voice recognition

--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p id="recording">recording status: not recording</p>
 <div id="charDiv">
     <p id="char" style="font-family: Cambria, Georgia, serif;">char</p>
 </div>
 
-<p id="youSaid">you said:</p>
-<p id="result">result</p>
-<p id="score">Your score is: </p>
+<div id="logs">
+    <p id="recording">recording status: not recording</p>
+    <p id="youSaid">you said:</p>
+    <p id="result">result</p>
+    <p id="score">Your score is: </p>
+    <p id="fails">fails: </p>
+    <p id="round">round: </p>
+    <p id="level">level: </p>
+</div>
 
-<p id="fails">fails: </p>
-<p id="round">round: </p>
-<p id="level">level: </p>
 
 <div class="container">
-    <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In Google Chrome.</h3>
+    <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This Demo In
+        Google Chrome.</h3>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
