adding flow pages

--- a/index.html
+++ b/index.html
@@ -7,20 +7,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
+
 <body>
-<div id="charDiv">
-    <p id="char" style="font-family: Cambria, Georgia, serif;">char</p>
+
+<div id="landingPage">
+    <h1>welcome to OPTIMO"</h1>
+    <button class="btnEnter">Enter</button>
 </div>
 
-<div id="logs">
-    <p id="recording">recording status: not recording</p>
-    <p id="youSaid">you said:</p>
-    <p id="result">result</p>
-    <p id="score">Your score is: </p>
-    <p id="fails">fails: </p>
-    <p id="round">round: </p>
-    <p id="level">level: </p>
+<div id="testing" style="visibility: none">
+    <div id="charDiv">
+        <p id="char" style="font-family: Cambria, Georgia, serif;">char</p>
+    </div>
+    <div id="logs">
+        <p id="recording">recording status: not recording</p>
+        <p id="youSaid">you said:</p>
+        <p id="result">result</p>
+        <p id="score">Your score is: </p>
+        <p id="fails">fails: </p>
+        <p id="round">round: </p>
+        <p id="level">level: </p>
+    </div>
 </div>
+
+<div id="scoreDiv">
+    <h2 id="scoreUser" style="font-size: 350px"></h2>
+</div>
+
+
 
 
 <div class="container">
