fixed flow pages using a JQuery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta16/shoelace.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 
@@ -13,10 +14,10 @@
 
 <div id="landingPage">
     <h1>welcome to OPTIMO"</h1>
-    <button class="btnEnter">Enter</button>
+    <button id="btnEnter" class="btnEnter">Enter</button>
 </div>
 
-<div id="testing" style="visibility: none">
+<div id="testing">
     <div id="charDiv">
         <p id="char" style="font-family: Cambria, Georgia, serif;">char</p>
     </div>
@@ -32,7 +33,7 @@
 </div>
 
 <div id="scoreDiv">
-    <h2 id="scoreUser" style="font-size: 350px"></h2>
+    <h2 id="scoreUser"></h2>
 </div>
 
 
