added navbar and more styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 
 
-<body>
+<body scroll="no" style="overflow: hidden">
+
+<div class="rectangle"></div>
+<h1 class="topmenu">OPTIMO</h1>
+
 
 <div id="landingPage">
-    <h1>welcome to OPTIMO"</h1>
+    <h1>welcome to OPTIMO</h1>
     <button id="btnEnter" class="btnEnter">Enter</button>
 </div>
 
@@ -35,8 +39,6 @@
 <div id="scoreDiv">
     <h2 id="scoreUser"></h2>
 </div>
-
-
 
 
 <div class="container">
