decent working version now, styling looks better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div id="landingPage">
     <h1>welcome to OPTIMO</h1>
-    <button id="btnEnter" class="btnEnter">Enter</button>
+    <button id="btnEnter" class="btnEnter" style="background-color: rgb(64,64,64);">Enter</button>
 </div>
 
 <div id="testing">
@@ -38,6 +38,7 @@
 
 <div id="scoreDiv">
     <h2 id="scoreUser"></h2>
+    <button id="btnRedo" class="btnRedo" style="background-color: rgb(64,64,64);">Take Again</button>
 </div>
 
 
